--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,496 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  font-family: 'Noto Sans', sans-serif;
+}
+/*header*/
+
+header {
+background-color: #070e16;
+padding: 20px;
+display: flex;
+align-items: center;
+justify-content: space-between;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.logo img {
+height: 60px;
+margin-left:50px;
 }
+
+nav ul {
+list-style: none;
+margin: 0;
+padding: 0;
+}
+
+nav ul li {
+display: inline-block;
+margin-right: 15px;
+}
+
+nav ul li a {
+text-decoration: none;
+color: white;
+font-weight: bold;
+transition: color 0.3s ease;
+}
+
+nav ul li a:hover {
+color: #ff0000;
+}
+
+/*hero*/
+
+.hero {
+background-image: url("assets/hero-background1.jpg");
+background-size: cover;
+background-position: center;
+height: 100vh;
+display: flex;
+text-align: left;
+color: #fff;
+}
+
+@media screen and (max-width: 768px){
+.hero {
+  text-align: center;
+}
+.hero-content h1{
+  font-size: 36px;
+
+}
+}
+
+.hero-content {
+max-width: 600px;
+padding: 20px;
+margin-top :50px;
+margin-left: 4%;
+
+}
+
+.hero-content h1 {
+font-size: 48px;
+margin-bottom: 20px;
+}
+
+.hero-content p {
+font-size: 24px;
+margin-bottom: 30px;
+}
+
+.btn {
+display: inline-block;
+background-color: #ff0000;
+color: #fff;
+padding: 10px 20px;
+border-radius: 5px;
+text-decoration: none;
+font-weight: bold;
+transition: background-color 0.3s ease;
+}
+
+.btn:hover {
+background-color: #e60000;
+}
+
+/*about*/
+
+.about {
+display: flex;
+align-items: center;
+padding: 80px 0;
+}
+
+.about-content {
+flex: 1;
+max-width: 600px;
+padding-right: 50px;
+color: #fff;
+margin-left: 5%;
+
+
+}
+
+.about h2 {
+font-size: 36px;
+margin-bottom: 20px;
+}
+
+.about p {
+font-size: 18px;
+margin-bottom: 20px;
+}
+
+.about-image {
+max-width: 50%;
+margin-right: 5%;
+}
+
+.about-image img {
+max-width: 100%;
+height: auto;
+border-radius: 5px;
+}
+
+.dark-theme {
+background-color: #070e16;
+}
+
+@media screen and (max-width: 768px){
+  .about{
+    flex-direction: column;
+    text-align: center;
+  }
+  .about-content h2{
+    font-size: 28px;
+  }
+  .about-content p{
+    font-size: 16px;
+  }
+
+
+
+}
+
+
+/* menu*/
+.menu {
+padding: 80px 0;
+text-align: center;
+background-color: #070e16;
+}
+
+.menu h2 {
+font-size: 36px;
+margin-bottom: 40px;
+color: #ffffff;
+}
+
+.menu-items {
+display: flex;
+justify-content: center;
+}
+
+.menu-item {
+max-width: 300px;
+margin: 0 20px;
+text-align: left;
+}
+
+.menu-item img {
+max-width: 100%;
+height: auto;
+border-radius: 5px;
+margin-bottom: 10px;
+}
+
+.menu-item h3 {
+font-size: 24px;
+margin-bottom: 10px;
+color: #ffffff;
+}
+
+.menu-item p {
+font-size: 16px;
+margin-bottom: 20px;
+color: #ffffff;
+}
+
+@media screen and (max-width: 768px){
+  .menu-items{
+    flex-direction: column;
+  }
+  .menu-item{
+    margin-bottom: 40px;
+  }
+
+}
+
+/* reservations*/
+
+.reservations {
+background-color: #1f1f1f;
+padding: 80px 0;
+text-align: center;
+}
+
+.reservation-form {
+max-width: 500px;
+margin: 0 auto;
+background-color: #333;
+padding: 40px;
+border-radius: 5px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+.reservation-form h2 {
+color: #fff;
+font-size: 28px;
+margin-bottom: 20px;
+}
+
+.reservation-form form input,
+.reservation-form form textarea {
+display: block;
+width: 100%;
+padding: 10px;
+margin-bottom: 20px;
+border-radius: 5px;
+border: none;
+}
+
+.reservation-form form button {
+display: inline-block;
+background-color: #ff0000;
+color: #fff;
+padding: 10px 20px;
+border-radius: 5px;
+text-decoration: none;
+font-weight: bold;
+transition: background-color 0.3s ease;
+}
+
+.reservation-form form button:hover {
+background-color: #e60000;
+}
+
+
+
+/* Testimonials Section*/
+
+.testimonials {
+padding: 80px 0;
+text-align: center;
+background-color: #070e16;
+}
+
+.testimonials h2 {
+font-size: 36px;
+margin-bottom: 40px;
+color: #fff;
+}
+
+.testimonial {
+max-width: 600px;
+margin: 0 auto 40px;
+text-align: left;
+}
+
+.testimonial img {
+display: block;
+width: 80px;
+height: 80px;
+border-radius: 50%;
+margin: 0 auto 20px;
+}
+
+.testimonial p {
+font-size: 18px;
+margin-bottom: 20px;
+color: #fff;
+}
+
+.testimonial h4 {
+font-size: 20px;
+font-weight: bold;
+color: #fff;
+}
+
+
+
+/* Gallery Section*/
+
+.gallery {
+padding: 80px 0;
+text-align: center;
+background-color: #070e16;
+}
+
+.gallery h2 {
+font-size: 36px;
+margin-bottom: 40px;
+color: #fff;
+}
+
+.image-grid {
+display: grid;
+grid-template-columns: repeat(4, 1fr);
+grid-gap: 20px;
+margin-left: 5%;
+margin-right: 5%;
+}
+
+.image-item img {
+width: 100%;
+height: auto;
+border-radius: 5px;
+}
+
+@media screen and (max-width: 768px){
+  .image-grid{
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+
+/* Contact Section*/
+
+.contact {
+background-color: #333;
+padding: 80px 0;
+text-align: center;
+color: #fff;
+}
+
+.contact-container {
+max-width: 600px;
+margin: 0 auto;
+}
+
+.contact h2 {
+font-size: 36px;
+margin-bottom: 40px;
+}
+
+.contact-info {
+display: flex;
+justify-content: center;
+margin-bottom: 40px;
+}
+
+.info-item {
+margin: 0 20px;
+text-align: center;
+}
+
+.info-item i {
+font-size: 24px;
+margin-bottom: 10px;
+}
+
+.contact-form input,
+.contact-form textarea {
+display: block;
+width: 100%;
+padding: 10px;
+margin-bottom: 20px;
+border-radius: 5px;
+border: none;
+}
+
+.contact-form textarea {
+resize: vertical;
+}
+
+.contact-form button {
+display: inline-block;
+background-color: #ff0000;
+color: #fff;
+padding: 10px 20px;
+border-radius: 5px;
+text-decoration: none;
+font-weight: bold;
+transition: background-color 0.3s ease;
+}
+
+.contact-form button:hover {
+background-color: #e60000;
+}
+
+@media screen and (max-width: 768px){
+  .contact-info{
+    flex-direction: column;
+    gap: 10px;
+  }
+
+}
+
+
+
+/* Footer*/
+
+.footer {
+background-color: #070e16;
+padding: 40px 0;
+color: #fff;
+text-align: center;
+}
+
+.footer-content {
+display: flex;
+flex-direction: column;
+align-items: center;
+margin-bottom: 40px;
+}
+
+.footer-logo img {
+max-width: 150px;
+}
+
+.footer-links a {
+color: #fff;
+margin: 0 10px;
+text-decoration: none;
+}
+
+.footer-social a {
+color: #fff;
+margin: 0 5px;
+text-decoration: none;
+}
+
+.footer-text {
+font-size: 14px;
+}
+
+
+
+
+
+/* Media Query for Responsive Header */
+@media screen and (max-width: 768px) {
+  .logo img {
+    height: 40px;
+  }
+
+  nav ul {
+    display: none;
+    flex-direction: column;
+    text-align: center;
+    padding-top: 10px;
+    background-color: #070e16;
+    position: absolute;
+    top: 70px;
+    left: 0;
+    right: 0;
+  }
+
+  nav ul.show {
+    display: flex; /* Show the nav menu when toggled */
+  }
+
+  nav ul li {
+    margin: 10px 0; /* Add margin between each menu item */
+  }
+
+  .menu-toggle {
+    display: block; /* Display the menu toggle button */
+    background: none;
+    border: none;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+  }
+}
+@media screen and (min-width: 769px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+
