--- a/src/index.css
+++ b/src/index.css
@@ -1,417 +1,400 @@
-*{
+* {
   margin: 0;
   padding: 0;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: "Noto Sans", sans-serif;
 }
 /*header*/
 
 header {
-background-color: #070e16;
-padding: 20px;
-display: flex;
-align-items: center;
-justify-content: space-between;
+  background-color: #070e16;
+  padding: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .logo img {
-height: 60px;
-margin-left:50px;
+  height: 60px;
+  margin-left: 50px;
 }
 
 nav ul {
-list-style: none;
-margin: 0;
-padding: 0;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 nav ul li {
-display: inline-block;
-margin-right: 15px;
+  display: inline-block;
+  margin-right: 15px;
 }
 
 nav ul li a {
-text-decoration: none;
-color: white;
-font-weight: bold;
-transition: color 0.3s ease;
+  text-decoration: none;
+  color: white;
+  font-weight: bold;
+  transition: color 0.3s ease;
 }
 
 nav ul li a:hover {
-color: #ff0000;
+  color: #ff0000;
 }
 
 /*hero*/
 
 .hero {
-background-image: url("assets/hero-background1.jpg");
-background-size: cover;
-background-position: center;
-height: 100vh;
-display: flex;
-text-align: left;
-color: #fff;
+  background-image: url("assets/hero-background1.jpg");
+  background-size: cover;
+  background-position: center;
+  height: 100vh;
+  display: flex;
+  text-align: left;
+  color: #fff;
 }
 
-@media screen and (max-width: 768px){
-.hero {
-  text-align: center;
-}
-.hero-content h1{
-  font-size: 36px;
-
-}
+@media screen and (max-width: 768px) {
+  .hero {
+    text-align: center;
+  }
+  .hero-content h1 {
+    font-size: 36px;
+  }
 }
 
 .hero-content {
-max-width: 600px;
-padding: 20px;
-margin-top :50px;
-margin-left: 4%;
-
+  max-width: 600px;
+  padding: 20px;
+  margin-top: 50px;
+  margin-left: 4%;
 }
 
 .hero-content h1 {
-font-size: 48px;
-margin-bottom: 20px;
+  font-size: 48px;
+  margin-bottom: 20px;
 }
 
 .hero-content p {
-font-size: 24px;
-margin-bottom: 30px;
+  font-size: 24px;
+  margin-bottom: 30px;
 }
 
 .btn {
-display: inline-block;
-background-color: #ff0000;
-color: #fff;
-padding: 10px 20px;
-border-radius: 5px;
-text-decoration: none;
-font-weight: bold;
-transition: background-color 0.3s ease;
+  display: inline-block;
+  background-color: #ff0000;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
 }
 
 .btn:hover {
-background-color: #e60000;
+  background-color: #e60000;
 }
 
 /*about*/
 
 .about {
-display: flex;
-align-items: center;
-padding: 80px 0;
+  display: flex;
+  align-items: center;
+  padding: 80px 0;
 }
 
 .about-content {
-flex: 1;
-max-width: 600px;
-padding-right: 50px;
-color: #fff;
-margin-left: 5%;
-
-
+  flex: 1;
+  max-width: 600px;
+  padding-right: 50px;
+  color: #fff;
+  margin-left: 5%;
 }
 
 .about h2 {
-font-size: 36px;
-margin-bottom: 20px;
+  font-size: 36px;
+  margin-bottom: 20px;
 }
 
 .about p {
-font-size: 18px;
-margin-bottom: 20px;
+  font-size: 18px;
+  margin-bottom: 20px;
 }
 
 .about-image {
-max-width: 50%;
-margin-right: 5%;
+  max-width: 50%;
+  margin-right: 5%;
 }
 
 .about-image img {
-max-width: 100%;
-height: auto;
-border-radius: 5px;
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
 }
 
 .dark-theme {
-background-color: #070e16;
+  background-color: #070e16;
 }
 
-@media screen and (max-width: 768px){
-  .about{
+@media screen and (max-width: 768px) {
+  .about {
     flex-direction: column;
     text-align: center;
   }
-  .about-content h2{
+  .about-content h2 {
     font-size: 28px;
   }
-  .about-content p{
+  .about-content p {
     font-size: 16px;
   }
-
-
-
 }
-
 
 /* menu*/
 .menu {
-padding: 80px 0;
-text-align: center;
-background-color: #070e16;
+  padding: 80px 0;
+  text-align: center;
+  background-color: #070e16;
 }
 
 .menu h2 {
-font-size: 36px;
-margin-bottom: 40px;
-color: #ffffff;
+  font-size: 36px;
+  margin-bottom: 40px;
+  color: #ffffff;
 }
 
 .menu-items {
-display: flex;
-justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .menu-item {
-max-width: 300px;
-margin: 0 20px;
-text-align: left;
+  max-width: 300px;
+  margin: 0 20px;
+  text-align: left;
 }
 
 .menu-item img {
-max-width: 100%;
-height: auto;
-border-radius: 5px;
-margin-bottom: 10px;
+  max-width: 100%;
+  height: auto;
+  border-radius: 5px;
+  margin-bottom: 10px;
 }
 
 .menu-item h3 {
-font-size: 24px;
-margin-bottom: 10px;
-color: #ffffff;
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #ffffff;
 }
 
 .menu-item p {
-font-size: 16px;
-margin-bottom: 20px;
-color: #ffffff;
+  font-size: 16px;
+  margin-bottom: 20px;
+  color: #ffffff;
 }
 
-@media screen and (max-width: 768px){
-  .menu-items{
+@media screen and (max-width: 768px) {
+  .menu-items {
     flex-direction: column;
   }
-  .menu-item{
+  .menu-item {
     margin-bottom: 40px;
   }
-
 }
 
 /* reservations*/
 
 .reservations {
-background-color: #1f1f1f;
-padding: 80px 0;
-text-align: center;
+  background-color: #1f1f1f;
+  padding: 80px 0;
+  text-align: center;
 }
 
 .reservation-form {
-max-width: 500px;
-margin: 0 auto;
-background-color: #333;
-padding: 40px;
-border-radius: 5px;
-box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  max-width: 500px;
+  margin: 0 auto;
+  background-color: #333;
+  padding: 40px;
+  border-radius: 5px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
 .reservation-form h2 {
-color: #fff;
-font-size: 28px;
-margin-bottom: 20px;
+  color: #fff;
+  font-size: 28px;
+  margin-bottom: 20px;
 }
 
 .reservation-form form input,
 .reservation-form form textarea {
-display: block;
-width: 100%;
-padding: 10px;
-margin-bottom: 20px;
-border-radius: 5px;
-border: none;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: none;
 }
 
 .reservation-form form button {
-display: inline-block;
-background-color: #ff0000;
-color: #fff;
-padding: 10px 20px;
-border-radius: 5px;
-text-decoration: none;
-font-weight: bold;
-transition: background-color 0.3s ease;
+  display: inline-block;
+  background-color: #ff0000;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
 }
 
 .reservation-form form button:hover {
-background-color: #e60000;
+  background-color: #e60000;
 }
-
-
 
 /* Testimonials Section*/
 
 .testimonials {
-padding: 80px 0;
-text-align: center;
-background-color: #070e16;
+  padding: 80px 0;
+  text-align: center;
+  background-color: #070e16;
 }
 
 .testimonials h2 {
-font-size: 36px;
-margin-bottom: 40px;
-color: #fff;
+  font-size: 36px;
+  margin-bottom: 40px;
+  color: #fff;
 }
 
 .testimonial {
-max-width: 600px;
-margin: 0 auto 40px;
-text-align: left;
+  max-width: 600px;
+  margin: 0 auto 40px;
+  text-align: left;
 }
 
 .testimonial img {
-display: block;
-width: 80px;
-height: 80px;
-border-radius: 50%;
-margin: 0 auto 20px;
+  display: block;
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin: 0 auto 20px;
 }
 
 .testimonial p {
-font-size: 18px;
-margin-bottom: 20px;
-color: #fff;
+  font-size: 18px;
+  margin-bottom: 20px;
+  color: #fff;
 }
 
 .testimonial h4 {
-font-size: 20px;
-font-weight: bold;
-color: #fff;
+  font-size: 20px;
+  font-weight: bold;
+  color: #fff;
 }
-
-
 
 /* Gallery Section*/
 
 .gallery {
-padding: 80px 0;
-text-align: center;
-background-color: #070e16;
+  padding: 80px 0;
+  text-align: center;
+  background-color: #070e16;
 }
 
 .gallery h2 {
-font-size: 36px;
-margin-bottom: 40px;
-color: #fff;
+  font-size: 36px;
+  margin-bottom: 40px;
+  color: #fff;
 }
 
 .image-grid {
-display: grid;
-grid-template-columns: repeat(4, 1fr);
-grid-gap: 20px;
-margin-left: 5%;
-margin-right: 5%;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 20px;
+  margin-left: 5%;
+  margin-right: 5%;
 }
 
 .image-item img {
-width: 100%;
-height: auto;
-border-radius: 5px;
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
 }
 
-@media screen and (max-width: 768px){
-  .image-grid{
+@media screen and (max-width: 768px) {
+  .image-grid {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
-
 /* Contact Section*/
 
 .contact {
-background-color: #333;
-padding: 80px 0;
-text-align: center;
-color: #fff;
+  background-color: #333;
+  padding: 80px 0;
+  text-align: center;
+  color: #fff;
 }
 
 .contact-container {
-max-width: 600px;
-margin: 0 auto;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 .contact h2 {
-font-size: 36px;
-margin-bottom: 40px;
+  font-size: 36px;
+  margin-bottom: 40px;
 }
 
 .contact-info {
-display: flex;
-justify-content: center;
-margin-bottom: 40px;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 40px;
 }
 
 .info-item {
-margin: 0 20px;
-text-align: center;
+  margin: 0 20px;
+  text-align: center;
 }
 
 .info-item i {
-font-size: 24px;
-margin-bottom: 10px;
+  font-size: 24px;
+  margin-bottom: 10px;
 }
 
 .contact-form input,
 .contact-form textarea {
-display: block;
-width: 100%;
-padding: 10px;
-margin-bottom: 20px;
-border-radius: 5px;
-border: none;
+  display: block;
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  border: none;
 }
 
 .contact-form textarea {
-resize: vertical;
+  resize: vertical;
 }
 
 .contact-form button {
-display: inline-block;
-background-color: #ff0000;
-color: #fff;
-padding: 10px 20px;
-border-radius: 5px;
-text-decoration: none;
-font-weight: bold;
-transition: background-color 0.3s ease;
+  display: inline-block;
+  background-color: #ff0000;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-decoration: none;
+  font-weight: bold;
+  transition: background-color 0.3s ease;
 }
 
 .contact-form button:hover {
-background-color: #e60000;
+  background-color: #e60000;
 }
 
-@media screen and (max-width: 768px){
-  .contact-info{
+@media screen and (max-width: 768px) {
+  .contact-info {
     flex-direction: column;
     gap: 10px;
   }
-
 }
-
-
 
 /* Footer*/
 
-.footer {
+/* .footer {
 background-color: #070e16;
 padding: 40px 0;
 color: #fff;
@@ -443,11 +426,124 @@ text-decoration: none;
 
 .footer-text {
 font-size: 14px;
+} */
+
+.footer {
+  background-color: #1c1816;
+  color: white;
+  padding: 2rem 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, sans-serif;
 }
 
+.footer-content {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
+.footer-logo {
+  text-align: center;
+  margin-bottom: 2rem;
+}
 
+.footer-logo img {
+  width: 80px;
+  height: auto;
+}
 
+.social-icons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+/* .social-icon {
+  width: 30px;
+  height: 30px; 
+  background-color: white;
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+} */
+
+.social-icon img {
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+}
+.footer-links {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 2rem;
+  margin-bottom: 2rem;
+}
+
+.footer-links a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  margin-bottom: 1rem;
+}
+
+.footer-links a:hover {
+  text-decoration: underline;
+}
+
+.app-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+.app-buttons img {
+  height: 30px;
+  width: auto;
+}
+
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 1rem;
+}
+
+.powered-by {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.powered-by span {
+  color: #ff0000;
+}
+
+@media (max-width: 768px) {
+  .footer-links {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .app-buttons {
+    justify-content: center;
+  }
+
+  .footer-bottom {
+    flex-direction: column;
+    text-align: center;
+  }
+
+  .powered-by {
+    justify-content: center;
+  }
+}
+
+@media (max-width: 480px) {
+  .footer-links {
+    grid-template-columns: 1fr;
+  }
+}
 
 /* Media Query for Responsive Header */
 @media screen and (max-width: 768px) {
@@ -494,3 +590,260 @@ font-size: 14px;
 }
 
 
+.container {
+  /* max-width: 1440px; */
+  margin: 0 auto;
+  padding: 1rem;
+  background-color: #070e16;
+}
+
+.top-deals {
+  width: 100%;
+  height: 100%;
+}
+.red-line {
+  width: 8px;
+  height: 24px;
+  background-color: #e4002b;
+  margin-right: 5px;
+  border-radius: 2px;
+}
+.section-title {
+  font-size: clamp(1.5rem, 5vw, 2.5rem);
+  font-weight: bold;
+  margin-bottom: 2rem;
+  position: relative;
+  display: inline-block;
+  color: #ccc;
+}
+
+.section-title::after {
+  content: "";
+  position: absolute;
+  bottom: -5px;
+  left: 0;
+  width: 100%;
+  height: 3px;
+  background-color: var(--primary-red);
+}
+
+.deals-grid {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 1.5rem;
+  width: 100%;
+}
+
+    .deal-card {
+        background-color: rgba(28, 24, 22, 0.8); /* Semi-transparent dark background */
+        border-radius: 1rem;
+        padding: 1.5rem;
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        transition: transform 0.3s ease, box-shadow 0.3s ease;
+        border: 1px solid rgba(255, 255, 255, 0.1); /* Light border */
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        overflow: hidden;
+    }
+
+    .deal-card::before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: linear-gradient(
+            135deg,
+            rgba(255, 255, 255, 0.1) 0%,
+            rgba(255, 255, 255, 0.05) 50%,
+            rgba(255, 255, 255, 0) 100%
+        );
+        pointer-events: none;
+    }
+
+    .deal-card:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+    }
+
+    /* Ensure other elements are above the overlay */
+    .deal-card > * {
+        position: relative;
+        z-index: 1;
+    }
+
+.deal-card:hover {
+  transform: translateY(-5px);
+}
+
+.dots {
+  display: flex;
+  gap: 0.25rem;
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  z-index: 1;
+  color: #ccc;
+}
+
+.dot {
+  width: 8px;
+  height: 24px;
+  /* background-color: var(--primary-red); */
+  border-radius: 2px;
+  color: #ccc;
+}
+
+.heart {
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  /* color: var(--primary-red); */
+  cursor: pointer;
+  font-size: 1.5rem;
+  z-index: 1;
+  transition: transform 0.3s ease;
+  color: #e60000;
+}
+
+.heart:hover {
+  transform: scale(1.2);
+}
+
+.image-container {
+  width: 100%;
+  height: 200px;
+  margin: 2rem 0;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.image-container img{
+  width: 200px}
+
+.product-image {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: contain;
+  transition: transform 0.3s ease;
+}
+
+.deal-card:hover .product-image {
+  transform: scale(1.05);
+}
+
+.product-title {
+  font-size: clamp(1.25rem, 3vw, 1.5rem);
+  font-weight: bold;
+  margin-bottom: 1rem;
+  color: #ccc;
+}
+
+.product-description {
+  /* color: var(--text-gray); */
+  margin-bottom: 1rem;
+  font-size: clamp(0.875rem, 2vw, 1rem);
+  flex-grow: 1;
+  line-height: 1.5;
+  color: #ccc;
+}
+
+.price {
+  font-size: clamp(1.125rem, 2.5vw, 1.25rem);
+  font-weight: bold;
+  margin-bottom: 1rem;
+  color: #ccc;
+}
+
+.add-to-bucket {
+  background-color: var(--primary-red);
+  color: white;
+  border: none;
+  border-radius: 0.5rem;
+  padding: 0.75rem 1.5rem;
+  font-weight: bold;
+  cursor: pointer;
+  width: 100%;
+  font-size: clamp(0.875rem, 2vw, 1rem);
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.add-to-bucket:hover {
+  background-color: #c4002b;
+  transform: scale(0.98);
+}
+
+/* Tablet Styles */
+@media screen and (min-width: 768px) {
+  .deals-grid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .image-container {
+    height: 250px;
+  }
+
+
+
+  .add-to-bucket {
+    width: auto;
+  }
+}
+
+/* Desktop Styles */
+@media screen and (min-width: 1024px) {
+  .deals-grid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .image-container {
+    height: 300px;
+  }
+
+  .deal-card {
+    min-height: 550px;
+  }
+}
+
+/* Large Desktop Styles */
+@media screen and (min-width: 1440px) {
+  .container {
+    padding: 2rem;
+  }
+
+  .image-container {
+    height: 350px;
+  }
+}
+
+/* Touch Device Optimizations */
+@media (hover: none) {
+  .deal-card:hover {
+    transform: none;
+  }
+
+  .deal-card:hover .product-image {
+    transform: none;
+  }
+
+  .add-to-bucket:active {
+    transform: scale(0.98);
+  }
+}
+
+/* Print Styles */
+@media print {
+  .deal-card {
+    break-inside: avoid;
+    background-color: white;
+    border: 1px solid #ccc;
+  }
+
+  .add-to-bucket {
+    display: none;
+  }
+}
