--- a/src/index.css
+++ b/src/index.css
@@ -587,7 +587,7 @@ font-size: 14px;
 } */
 
 .footer {
-  background-color: #1c1816;
+  background-color: #070e16;
   color: white;
   padding: 2rem 1rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
