kebab page created Home page hero section ui

--- a/src/Pages/Pizaa/pizaa.css
+++ b/src/Pages/Pizaa/pizaa.css
@@ -338,7 +338,7 @@ h1 {
 }
 
 .product-image {
-  width: 100%;
+  width: 500px;
   height: auto;
   margin-bottom: 1rem;
   transition: transform 0.3s ease;
